# TYPXEN

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  PROTOCOL_PROVENANCE.json  README.md  SECURITY.md  SHA256SUMS-v1.0.0-rc3.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  hardware_compatibility.yml
components/typx_ble_identity/: CMakeLists.txt
components/typx_discovery/: CMakeLists.txt
docs/: APP_INSTALLATION.md  BLE_HID_VALIDATION.md  BLUETOOTH_IDENTITY_API.md  DAILY_USE.md  DEVICE_SETUP.md  FIRMWARE_FLASHING.md  HARDWARE_COMPATIBILITY.md  HTTP_API.md  INDEX.md  LOCAL_SCHEDULE_VALIDATION.md  PHASE3_ARCHITECTURE.md  PROTOCOL.md  RC3_HARDWARE_VALIDATION.md  RECOVERY.md  TROUBLESHOOTING.md  WIFI_UPLOAD.md
host_tests/: run_ble_identity_tests.ps1  run_discovery_tests.ps1  run_execution_safety_tests.ps1  run_hid_tests.ps1  run_local_schedule_tests.ps1  run_public_package_tests.ps1  run_tests.ps1  run_wifi_station_tests.ps1  run_wifi_upload_tests.ps1  test_ble_identity.c  test_discovery.c  test_execution_safety.c  test_firmware_verifier.py  test_hid_runtime.c  test_local_schedule.c  test_main.c  test_public_package.py  test_wifi_station.c  test_wifi_upload.c  test_windows_setup.py
targets/esp32_cam/main/: CMakeLists.txt  idf_component.yml  main.c  typx_ble_hid.c  typx_ble_hid.h  typx_console.c  typx_console.h  typx_embedded_schedules.c  typx_embedded_schedules.h  typx_identity_http.c  typx_identity_http.h  typx_identity_service.c  typx_identity_service.h  typx_wifi_service.c  typx_wifi_service.h
tools/: package_public_release.py
(+45 files in other folders)
